# robotclaw

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/robotclaw/: SKILL.md  __init__.py  cli.py  openclaw_skill.py  robot.py  robot_config.py  servo_bus.py
src/robotclaw/recorder/: __init__.py  motion_data.py  player.py  recorder.py
tests/: test_motion_data.py  test_robot_config.py  test_servo_bus.py
